# charos

./: .gitignore  FILESYSTEM.md  README.md
.claude/: settings.local.json
claude/: CLAUDE.md
clipd/: jarvis_daemon.py  nest_daemon.py
drawercast/: .gitignore  README.md  devtools-snippet.js  server.out  server.py  start.sh  tc-nest.tailb8d6bc.ts.net.crt
experiments/: fresh-claude-prompt-test.md
family-council/: .council.vim
foot/: foot.ini
furnace/: __init__.py  __main__.py  app.py
haros-fov/: config.json  server.py
haros-swarms/: VALIDATION.md
iris-start-here/: README.md  hardware-constraints.md
jukebox/: mcp-start.sh  mcp_server.py  server.py  start.sh
llm-guestbook/: guestbook.sqlite  server.py
mtg/: README.md  card_cache.py  mtg  mtg_engine.py
nixos/: configuration.nix  desktop.nix  packages.nix  services.nix  users.nix
prompts/: homecoming.md
scout-dashboard/: NTFY-INTEGRATION.md  TC-SEE-INTEGRATION.md  prototype.html
scripts/: charos-install.sh  charos.sh  fix-sway-paths.sh  forge-monitor.sh  post-install.sh  scrub-sweep.env.template  scrub-sweep.py  start-sway.sh  tc-launch.sh  tc-monitor.sh  tc-signal.sh  tc-watchdog.sh  test-vm.sh
shell/: charos-env.sh  starship.toml  (+1 more)
surfscout/: .gitignore  MVP.md  PRIMER.md  README.md  pyproject.toml
surfscout/scripts/: aliases.sh  day1_smoke.sh  smoke.sh
surfscout/surfscout/: __init__.py  cli.py  daemon.py  ipc.py  read.py  session.py  stealth.py
surfscout/tests/: conftest.py  test_actions.py  test_crash_recovery.py  test_read_local.py  test_read_real_sites.py
surfscout/tests/fixtures/: interactive.html  sample.html
(+218 files in other folders)
