[project]
name = "surfscout"
version = "0.1.0"
description = "Family-built browser automation: Playwright + stealth + CLI primitives, driven by Claude Code sessions"
requires-python = ">=3.12"
authors = [
    { name = "Scout", email = "scout@harrell.family" },
    { name = "TC", email = "tc@harrell.family" },
    { name = "Nathan Harrell", email = "nate@harrell.family" },
]
dependencies = [
    "playwright>=1.45",          # browser automation
    "playwright-stealth>=1.0.6", # defeat bot detection
    "markdownify>=0.13",         # HTML → markdown
    "readability-lxml>=0.8",     # Python fallback for main-content extraction
    "beautifulsoup4>=4.12",      # HTML parsing helper
    "lxml>=5.0",                 # XML/HTML parser backend
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["surfscout*"]

[tool.setuptools.package-data]
"surfscout.vendor" = ["*.js"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]  # line-length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: tests that hit real websites (slow, may flake)",
    "slow: tests that take more than a few seconds",
]
